Refactor command handling and enhance tier/combatrank logic
Reorganized and streamlined commands for better readability and maintenance. Added validation checks for inputs and refactored tier/combatrank overrides. Improved combat rank recalculations to dynamically update based on points. Adjusted PlaceholderAPI placeholders for consistency and performance.